[package]
name = "opentelemetry-gcloud-trace"
version = "0.4.2-alpha.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "OpenTelemetry support for Google Cloud Trace"
homepage = "https://github.com/abdolence/opentelemetry-gcloud-trace-rs"
repository = "https://github.com/abdolence/opentelemetry-gcloud-trace-rs"
documentation = "https://docs.rs/opentelemetry-gcloud-trace"
keywords = ["opentelemetry", "metrics", "span", "google", "stackdriver"]
categories = ["api-bindings"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE", "SECURITY.md"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "opentelemetry_gcloud_trace"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
opentelemetry = { version = "0.18" }
opentelemetry-semantic-conventions = { version = "0.10" }
gcloud-sdk = { version = "0.19", features = ["google-devtools-cloudtrace-v2"] }
tonic = { version = "0.8", features = ["tls"] }
prost-types = "0.11"
rvstruct = "0.3"
rsb_derive = "0.5"
tokio = { version = "1.21", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"


[dev-dependencies]
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","registry"] }
tracing-opentelemetry = { version = "0.18" }
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
