[package]
name = "opentelemetry-gcloud-trace"
version = "0.9.1-alpha.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "OpenTelemetry support for Google Cloud Trace"
homepage = "https://github.com/abdolence/opentelemetry-gcloud-trace-rs"
repository = "https://github.com/abdolence/opentelemetry-gcloud-trace-rs"
documentation = "https://docs.rs/opentelemetry-gcloud-trace"
keywords = ["opentelemetry", "metrics", "span", "google", "stackdriver"]
categories = ["api-bindings"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE", "SECURITY.md"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "opentelemetry_gcloud_trace"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
opentelemetry = { version = "0.22" }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.14" }
gcloud-sdk = { version = "0.24", features = ["google-devtools-cloudtrace-v2"] }
rvstruct = "0.3"
rsb_derive = "0.5"
tokio = { version = "1" }
tokio-stream = "0.1"
futures = "0.3.30"
async-trait = "0.1"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.22" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","registry"] }
tracing-opentelemetry = { version = "0.23" }
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
